temporary spacing fix

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -51,7 +51,7 @@ window#waybar {
 
 #custom-mullvad {
     background: transparent;
-    padding: 0 10px;
+    padding: 0 32px;
     border-radius: 6px;
 }
 
@@ -70,12 +70,11 @@ window#waybar {
 #mpd {
     background: transparent;
     border-radius: 6px;
-    padding: 0 24px;
+    margin: 0 6px;
+    padding: 0 30px;
 }
 
 #wireplumber {
-    padding: 0 10px;
-    margin: 0 12px;
     background: transparent;
     border-radius: 6px;
 }
